# tig

./: .gitignore  Dockerfile  Makefile  README.md  TODO.md  _run.sh  capstone_pass.py  factor.py  get_ghidra_basicblocks.sh  ghidra_decompiler.sh  llvm-objdump_pass.py  objdump_pass.py  parse_result_json.py  paths.txt  prog  pyproject.toml  requirements.txt  run.sh  shell.nix  test.c  time_of_riscv_func.py  vexview.py
disassembly_diff/RTODemo/: capstone.txt  ghidra.txt  riscv-objdump.txt
disassembly_diff/RTODemo/riscv32/: ghidra.txt  llvm-objdump.txt  riscv-objdump.txt
disassembly_diff/riscv32/: capstone.txt  llvm-objdump.txt  objdump.txt  riscv-objdump.txt
disassembly_diff/switch-cases/: ghidra.txt  llvm-objdump.txt
disassembly_diff/x86/: capstone.txt  ghidra.txt  llvm-objdump.txt
example/: branches  example.c  example.json  switch.c  switch.riscv32.clang.O0  switch.riscv64.gcc.O0  switch.x86.clang.O0
examples/: branches.c  loop.c  loop.json  switch.json  vTaskSwitchContext.constraints
ghidra_scripts/: GetBasicBlocks.java  _run.sh
tig/: bininfo.py  extract_basic_blocks.py  memory_mixins.py  symbolic_execution.py  tig.py  time_of_riscv_func.py  tree.py
