[tool.poetry]
name = "tig"
version = "0.1.0"
description = ""
authors = ["Charles Averill <charlesaverill20@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.1"
sympy = "^1.13.3"
networkx = "^3.4.2"
# angr = "^9.2.148"
angr = { git = "https://github.com/CharlesAverill/angr@master" }
archinfo = "^9.2.148"
# pypcode = "^3.0.3"
pypcode = { git = "https://github.com/spencerwuwu/pypcode" }

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
types-networkx = "^3.4.2"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tig = "tig.tig:main"
